tests/data/placebo/test_security_group_codebuild_unused/codebuild.BatchGetProjects_1.json
{
    "status_code": 200,
    "data": {
        "projects": [
            {
                "name": "test-project",
                "arn": "arn:aws:codebuild:us-east-1:644160558196:project/test-project",
                "description": "test_codebuild_project",
                "source": {
                    "type": "GITHUB",
                    "location": "https://github.com/mitchellh/packer.git",
                    "gitCloneDepth": 1,
                    "gitSubmodulesConfig": {
                        "fetchSubmodules": true
                    },
                    "buildspec": "",
                    "reportBuildStatus": false,
                    "insecureSsl": false
                },
                "sourceVersion": "master",
                "artifacts": {
                    "type": "NO_ARTIFACTS",
                    "overrideArtifactName": false
                },
                "cache": {
                    "type": "NO_CACHE"
                },
                "environment": {
                    "type": "LINUX_CONTAINER",
                    "image": "aws/codebuild/standard:1.0",
                    "computeType": "BUILD_GENERAL1_SMALL",
                    "environmentVariables": [
                        {
                            "name": "SOME_KEY1",
                            "value": "SOME_VALUE1",
                            "type": "PLAINTEXT"
                        },
                        {
                            "name": "SOME_KEY2",
                            "value": "SOME_VALUE2",
                            "type": "PARAMETER_STORE"
                        }
                    ],
                    "privilegedMode": false,
                    "imagePullCredentialsType": "CODEBUILD"
                },
                "serviceRole": "arn:aws:iam::644160558196:role/example",
                "timeoutInMinutes": 5,
                "queuedTimeoutInMinutes": 480,
                "encryptionKey": "arn:aws:kms:us-east-1:644160558196:alias/aws/s3",
                "tags": [
                    {
                        "key": "Environment",
                        "value": "Test"
                    }
                ],
                "created": {
                    "__class__": "datetime",
                    "year": 2020,
                    "month": 9,
                    "day": 24,
                    "hour": 22,
                    "minute": 12,
                    "second": 54,
                    "microsecond": 99000
                },
                "lastModified": {
                    "__class__": "datetime",
                    "year": 2020,
                    "month": 9,
                    "day": 24,
                    "hour": 22,
                    "minute": 12,
                    "second": 54,
                    "microsecond": 99000
                },
                "vpcConfig": {
                    "vpcId": "vpc-00fed1d2e5557678b",
                    "subnets": [
                        "subnet-02200da0895f97c08"
                    ],
                    "securityGroupIds": [
                        "sg-0ba8947583197f421"
                    ]
                },
                "badge": {
                    "badgeEnabled": false
                },
                "logsConfig": {
                    "cloudWatchLogs": {
                        "status": "ENABLED",
                        "groupName": "log-group",
                        "streamName": "log-stream"
                    },
                    "s3Logs": {
                        "status": "DISABLED",
                        "encryptionDisabled": false
                    }
                }
            }
        ],
        "projectsNotFound": [],
        "ResponseMetadata": {}
    }
}
