tests/data/placebo/test_security_group_codebuild_unused/events.ListRules_1.json
{
    "status_code": 200,
    "data": {
        "Rules": [
            {
                "Name": "aws-controltower-ConfigComplianceChangeEventRule",
                "Arn": "arn:aws:events:us-east-1:644160558196:rule/aws-controltower-ConfigComplianceChangeEventRule",
                "EventPattern": "{\"detail-type\":[\"Config Rules Compliance Change\"],\"source\":[\"aws.config\"]}",
                "State": "ENABLED",
                "Description": "CloudWatch Event Rule to send notification on Config Rule compliance changes.",
                "EventBusName": "default"
            }
        ],
        "ResponseMetadata": {}
    }
}
